# Menger-Sponge

./: CMakeLists.txt  README.md
include/: common_matrices.hpp  cube.hpp  mat4f.hpp  shader_tools.hpp  sierpinski.hpp  triangle.hpp  vec3f.hpp
src/: common_matrices.cpp  cube.cpp  main.cpp  mat4f.cpp  shader_tools.cpp  triangle.cpp  vec3f.cpp
